--- a/styles/style.css
+++ b/styles/style.css
@@ -3,14 +3,29 @@ body {
     padding: 0;
 }
 
-#header {
-    background-color: blue;
-    display: flex;
+a {
+    color: black;
 }
 
-.headerMenu {
-    background-color: red;
+#header {
+    z-index: 100;
+    width: 100%;
+    height: 50px;
+    margin: 0;
+    background-color: blue;
     display: flex;
+    position: relative;
+}
+
+#headerMenusWrapper {
+    position: absolute;
+}
+
+.headerMenuList{
+    background-color: red;
+    display: block;
+    list-style: none;
+    padding: 5px;
 }
 
 .hidden {
