--- a/styles/admin.css
+++ b/styles/admin.css
@@ -69,15 +69,18 @@ h2:hover {
 
 /* Style d'image */
 
-.aff_image {
+.aff_image,
+.aff_imageBlog {
    display: none;
 }
 
-.aff_image.active {
+.aff_image.active,
+.aff_imageBlog.active {
    display: block;
 }
 
-.aff_image.active tr {
+.aff_image.active tr,
+.aff_imageBlog.active tr {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
@@ -89,6 +92,7 @@ h2:hover {
    display: flex;
    flex-direction: column;
    align-items: center;
+   padding: 0.5em;
 }
 .image img {
    width: 20%;
@@ -113,4 +117,17 @@ h2:hover {
    background: #000066;
    border-radius: 0px 0px 10px 10px;
    box-shadow: inset 13px 13px 26px #acacac, inset -13px -13px 26px #ffffff;
+}
+
+.image button {
+   border: none;
+   border-radius: 5px 10px 5px 10px;
+   padding: 0.5em;
+   font-size: 0.9em;
+}
+
+.image button:hover {
+   transform: scale(1.1);
+   background-color: rgba(244, 67, 54, 0.6);
+   transition: all 1s;
 }
