--- a/styles/faq_style.css
+++ b/styles/faq_style.css
@@ -1,21 +1,124 @@
 body{
-    background-color: lightskyblue;
+    background-color: rgb(221, 230, 243);
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    align-items: center;
+    font-family:Arial, Helvetica, sans-serif;
+
+}
+
+#FAQContent{
+    display: flex;
+    flex-direction: column;
+    align-content:center;
+    align-items: stretch;
+    flex-wrap: wrap;
+
+    width:50vw;
+
+}
+/*---- Question style ----*/
+
+/*Question not chosen*/
+.question{
+    padding:3vw;
     display: flex;
     flex-direction: column;
     align-content: center;
     align-items: center;
+    flex-wrap: wrap;
+
+    transition-duration: 1s;
 }
 
-.question{
-    background-color: rgb(27, 140, 211);
+
+.questionOpen{
+    background-color: rgb(178, 200, 232);
+    padding: 5vh;
+    padding:3vw;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+    transition-duration: 1s;
 }
 
-.title{
-    background-color: rgb(16, 102, 155);
+
+
+.questionOpen .response{
+    display:block;
+    opacity: 1;
+    animation: slidein 2s;
+
+    margin: 5vh;
 
 }
+
+
+h3::before {  
+transform: scaleX(0);
+transform-origin: bottom right;
+}
+
+h3:hover::before {
+transform: scaleX(1);
+transform-origin: bottom left;
+}
+
+h3::before {
+content: " ";
+display: block;
+position: absolute;
+top: 0; right: 0; bottom: 0; left: 0;
+inset: 0 0 0 0;
+background: rgb(120, 153, 203);
+z-index: -1;
+transition: transform .3s ease;
+}
+
+h3 {
+position: relative;
+font-size: 1.5rem;
+}
+  
+
+
+
+/*Response not chosen*/
+
 
 .response{
-    background-color: rgb(16, 54, 77);
+    display: none;
+}
 
+@keyframes fadein {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
+
+@keyframes slidein {
+    from{
+        margin-top: -1vh;
+    }
+    to{
+        margin-top: 5vh;
+    }
+}
+
+
+@keyframes slideout {
+    from{
+        margin-top: 5vh;
+    }
+    to{
+        margin-top: -1vh;
+    }
 }
