--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+html {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -19,13 +24,24 @@ a {
 
 #headerMenusWrapper {
     position: absolute;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 0;
+}
+
+.headerMenu {
+    margin: 0;
+    padding: 1px;
 }
 
 .headerMenuList{
     background-color: red;
     display: block;
     list-style: none;
-    padding: 5px;
+    margin: 5px;
+    padding: 1px;
 }
 
 .hidden {
