console.log de debug inutilisé dans main.js

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,6 +37,10 @@ a {
     width:10%;
 }
 
+.headerMenuTitle {
+    font-size: 20px;
+}
+
 .headerMenuList{
     background-color: red;
     display: block;
