--- a/styles/processus_saut.css
+++ b/styles/processus_saut.css
@@ -1,5 +1,5 @@
 
-body{
+main{
     background-color: rgb(221, 230, 243);
     display: flex;
     flex-direction: column;
@@ -10,7 +10,7 @@ body{
 
 }
 
-a{
+main a{
     text-decoration: none;
 }
 /* Titre */
