--- a/styles/style.css
+++ b/styles/style.css
@@ -8,16 +8,17 @@ body {
     padding: 0;
 }
 
-a {
+header a {
+    text-decoration: none;
     color: black;
 }
 
 #header {
     z-index: 100;
-    width: 100%;
-    height: 50px;
+    width: 100vw;
+    height: 20vh;
     margin: 0;
-    background-color: blue;
+    background-color: rgb(43, 73, 206);
     display: flex;
     position: relative;
 }
@@ -25,15 +26,23 @@ a {
 #headerMenusWrapper {
     position: absolute;
     width: 100%;
+    height: inherit;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     padding: 0;
+    margin: 0;
+    font-family: "Trebuchet MS", Verdana, sans-serif;
 }
 
 .headerMenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0;
     padding: 1px;
+    height: 15%;
     width:10%;
 }
 
@@ -42,11 +51,27 @@ a {
 }
 
 .headerMenuList{
-    background-color: red;
-    display: block;
+    line-height: 1.5;
+    background-color: rgb(98, 124, 174);
+    display: flex;
+    flex-direction: column;
     list-style: none;
-    margin: 5px;
-    padding: 1px;
+    margin: 0;
+    padding: 10%;
+    font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    align-items: center;
+    width: fit-content;
+}
+
+.headerMenuList li {
+    width: fit-content;
+}
+
+.headerMenuList li a {
+    width: fit-content;
 }
 
 .hidden {
