--- a/styles/faq_style.css
+++ b/styles/faq_style.css
@@ -1,4 +1,4 @@
-body{
+main{
     background-color: rgb(221, 230, 243);
     display: flex;
     flex-direction: column;
@@ -30,8 +30,12 @@ body{
     flex-wrap: wrap;
 
     transition-duration: 1s;
+    border-bottom:1px solid rgb(100, 125, 163);
 }
 
+.question:first-child{
+    border-top:1px solid rgb(100, 125, 163);
+}
 
 .questionOpen{
     background-color: rgb(178, 200, 232);
@@ -82,6 +86,8 @@ transition: transform .3s ease;
 h3 {
 position: relative;
 font-size: 1.5rem;
+
+
 }
   
 
@@ -120,5 +126,6 @@ font-size: 1.5rem;
     }
     to{
         margin-top: -1vh;
+        display: none;
     }
 }
