--- a/styles/style_division.css
+++ b/styles/style_division.css
@@ -24,15 +24,16 @@ main a{
 #imagesIntro{
     display : flex;
     flex-direction: row;
-
+    
     width: 100vw;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 #imagesIntro img{
     width: 11vw;
     filter: grayscale(100%);
-    width:100%;
+    height: 7vw;
+    object-fit: cover;
     transition: all 0.2s;
     object-fit: cover;
     background-color: brown;
@@ -73,26 +74,26 @@ h2{
 }
 
 
-.etape_processus{
+.division{
     display: flex;
     flex-direction: column;
     align-content: stretch;
     align-items: center;
 }
 
-.etape_contenu{
+.division_contenu{
     display: flex;
     flex-direction: row;
     align-content: stretch;
     align-items: center;
 }
 
-.etape_contenu p{
+.division_contenu p{
     text-align: justify;
     padding: 2vw;
 }
 
-.etape_contenu img{
+.division_contenu img{
     box-shadow:8px 8px 10px 0 rgba(0,0,0,0.5);
     margin:2vw;
     width: 50vw;
