--- a/styles/style.css
+++ b/styles/style.css
@@ -24,7 +24,7 @@ header a {
 
 #header {
    z-index: 100;
-   width: 100vw;
+   width: 100%;
    height: 20vh;
    margin: 0;
    background-color: rgb(43, 73, 206);
