fix scroll horizontal histoire du parachutisme

--- a/styles/style_division.css
+++ b/styles/style_division.css
@@ -25,7 +25,7 @@ main a{
     display : flex;
     flex-direction: row;
     
-    width: 100vw;
+    width: 100%;
     justify-content: center;
 }
 
