--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@ body {
    margin: 0;
    padding: 0;
    background-color: rgb(221, 230, 243);
+   font-family: Arial, Helvetica, sans-serif;
 }
 
 main {
@@ -27,7 +28,7 @@ header a {
    width: 100%;
    height: 20vh;
    margin: 0;
-   background-color: rgb(83, 101, 180);
+   background-color: rgb(112, 125, 184);
    display: flex;
    position: relative;
 }
@@ -50,18 +51,25 @@ header a {
    height: 5vw;
 }
 
+
+#logo{
+   height: 20vh;
+}
+
 .logoTitleMenu {
    height: 10vw;
 }
 
 .textTitleMenu {
    height: 15%;
+   color : white;
 }
 
 .headerMenu {
    display: flex;
    flex-direction: column;
    align-items: center;
+   /*justify-content: center;*/
    margin: 0;
    padding: 0;
    width: 10%;
@@ -73,7 +81,7 @@ header a {
 
 .headerMenuList {
    line-height: 1.5;
-   background-color: rgb(98, 124, 174);
+   background-color: rgb(79, 98, 134);
    display: flex;
    flex-direction: column;
    list-style: none;
@@ -84,7 +92,9 @@ header a {
    flex-direction: column;
    align-content: stretch;
    align-items: center;
+   justify-content: center;
    width: fit-content;
+   flex-wrap: wrap;
 }
 
 .headerMenuList li {
@@ -94,8 +104,10 @@ header a {
 
 .headerMenuList li a {
    width: fit-content;
+   color: white;
 }
 
 .hidden {
    display: none;
 }
+
