--- a/styles/actualites.css
+++ b/styles/actualites.css
@@ -2,16 +2,9 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     flex-wrap: nowrap;
 }
 
-.blogWrapper {
-    background-color: rgb(31, 221, 255);
-    border-radius: 1em;
-    margin-top: 2em;
-    padding: 0.5em;
-}
 
 .blogTitle {
     background-color: none;
@@ -19,8 +12,35 @@ main {
 
 .blogDate {
     background-color: none;
+    font-size: .9em;
+    color: rgb(22, 72, 171);
+    font-weight: bold;
+    align-self: end;
+    order: -1;
 }
 
 .blogContent {
     background-color: none;
+    font-size: 1.1em;
+    
 }
+
+
+.blogWrapper{
+    border:1px solid rgb(72, 106, 156);
+    margin-top: 2em;
+    padding: 0.5em;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(146, 179, 228, 0.438);
+    margin-left: 12vw;
+    margin-right: 12vw;
+ 
+ }
+ 
+ .blogWrapper h3{
+    align-self: center;
+    font-size: 1.5em;
+    color: rgb(24, 39, 69);
+ }
